refactor user role relation
